--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@
 .topbarContainer .searchbar {
   width: 100%;
   height: 32px;
-  background-color: #fff;
+  background-color: #f8eaff;
   border-radius: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -46,6 +46,7 @@
 .topbarContainer .seachInput {
   border: none;
   width: 70%;
+  background-color: #f8eaff;
 }
 
 .topbarContainer .seachInput:focus {
@@ -56,7 +57,7 @@
   font-size: 24px;
   margin-left: 20px;
   font-weight: bold;
-  color: #fff;
+  color: #f8eaff;
   cursor: pointer;
 }
 
@@ -72,7 +73,7 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  color: #fff;
+  color: #f8eaff;
 }
 
 .topbarContainer .topbarLinks {
@@ -123,8 +124,238 @@
   cursor: pointer;
 }
 
+.feed {
+  -webkit-box-flex: 5.5;
+      -ms-flex: 5.5;
+          flex: 5.5;
+}
+
+.feedWrapper {
+  padding: 20px;
+}
+
+.rightbar {
+  -webkit-box-flex: 3.5;
+      -ms-flex: 3.5;
+          flex: 3.5;
+}
+
+.sidebar {
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
+}
+
+.sidebar .sidebarWrapper {
+  padding: 20px;
+}
+
+.sidebar .siderList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sidebar .siderListItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.sidebar .sidebarButton {
+  width: 150px;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: 400;
+}
+
+.sidebar .sidebarHr {
+  margin: 20px 0;
+}
+
+.sidebar .sidebarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sidebar .sidebarFriend {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 15px;
+}
+
+.sidebar .sidebarFriendsImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+
+.homeContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.share {
+  width: 100%;
+  height: 170px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
+  box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
+}
+
+.share .shareWrapper {
+  padding: 20px;
+}
+
+.share .shareTop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.share .shareProfileImg {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+
+.share .shareInput {
+  border: none;
+  width: 80%;
+}
+
+.share .shareInput:focus {
+  outline: none;
+}
+
+.share .shareHr {
+  margin: 20px;
+}
+
+.share .shareButtom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.share .shareOptions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 20px;
+}
+
+.share .shareOption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 15px;
+}
+
+.share .shareIcon {
+  font-size: 18px;
+  margin-right: 3px;
+}
+
+.share .shareOptionText {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.share .shareBtn {
+  margin-left: 100px;
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: green;
+  font-weight: 500;
+}
+
+.post {
+  width: 100%;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
+  box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
+  margin: 30px 0;
+}
+
+.post .postWrapper {
+  padding: 10px;
+}
+
+.post .postTop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.post .postTopLeft {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.post .postProfileImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.post .postUsername {
+  font-size: 15px;
+  font-weight: 500px;
+  margin: 0 10px;
+}
+
+.post .postDate {
+  font-size: 12px;
+}
+
 * {
   margin: 0;
-  font-family: 'Benne';
+  font-family: "Benne";
 }
 /*# sourceMappingURL=style.css.map */
