--- a/public/scss/bar/_topbar.scss
+++ b/public/scss/bar/_topbar.scss
@@ -17,7 +17,7 @@
   .searchbar {
     width: 100%;
     height: 32px;
-    background-color: #fff;
+    background-color: $white;
     border-radius: 30px;
     display: flex;
     align-items: center;
@@ -30,6 +30,7 @@
   .seachInput {
     border: none;
     width: 70%;
+    background-color:$white;
   }
   .seachInput:focus {
     outline: none;
@@ -39,7 +40,7 @@
     font-size: 24px;
     margin-left: 20px;
     font-weight: bold;
-    color: #fff;
+    color: $white;
     cursor: pointer;
   }
   .topbarRight {
@@ -47,7 +48,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    color: #fff;
+    color: $white;
   }
 
   .topbarLinks {
