--- a/public/scss/post/_post.scss
+++ b/public/scss/post/_post.scss
@@ -1,37 +1,67 @@
-.post{
+.post {
+  width: 100%;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
+  box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
+  margin: 30px 0;
+
+  .postWrapper {
+    padding: 10px;
+  }
+  .postTop {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .postTopLeft {
+    display: flex;
+    align-items: center;
+  }
+  .postProfileImg {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .postUsername {
+    font-size: 15px;
+    font-weight: 500px;
+    margin: 0 10px;
+  }
+  .postDate {
+    font-size: 12px;
+  }
+
+  .postCenter {
+    margin: 20px 0;
+  }
+  .likeIcon {
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+    cursor: pointer;
+    border-radius: 50%;
+  }
+
+  .postImg {
+    margin-top: 20px;
     width: 100%;
-    border-radius: 10px;
-    -webkit-box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
-    box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.37);
-    margin: 30px 0 ;
+    max-height: 500px;
+    object-fit: contain;
+  }
+  .postBottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-    .postWrapper{
-        padding: 10px;
-    }
-    .postTop{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .postTopLeft{
-        display: flex;
-        align-items: center;
-    }
-    .postProfileImg{
-        width: 32px;
-        height: 32px;
-        border-radius: 50%;
-        object-fit: cover;
-
-    }
-
-    .postUsername{
-        font-size:15px;
-        font-weight: 500px;
-        margin: 0 10px;
-    }
-    .postDate{
-        font-size:12px;
-         
-    }
+  .postCommentText {
+    cursor: pointer;
+    border-bottom: 1px dashed grey;
+    font-size: 15px;
+  }
+  .postLikeCounter {
+      font-size:15px
+  }
 }
