--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -6,6 +6,8 @@
 @import "pages/home";
 @import "share/share";
 @import "post/post";
+@import "pages/profile";
+@import "pages/login";
 
 * {
   margin: 0;
